# cmake_template

./: CMakeLists.txt  readme.md  run.sh
src/driver/: CMakeLists.txt  printhello.cpp  printhello.h
src/process/: CMakeLists.txt  print_double_hello.cpp  print_double_hello.h
src/ui/: CMakeLists.txt  print_forth_hello.cpp  print_forth_hello.h
